--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,5 @@
-
+<!--For each category, the category-details partial is userd to render the category data-->
 {{#each categories as |category|}}
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-      <h2>{{name}}</h2>
-    </div>
-  <div class="col-md-6">
-    <h3>{{description}}</h3>
-    <h3>{{product_name}}</h3>
-    <h3>{{product_name}}</h3>
-    <h3>{{product_name}}</h3>
-  </div>
-</div>
+{{> category-details}}
 {{/each}}
 
