--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -2,7 +2,7 @@
   <h3 class="category-name">{{category.name}}</h3>
   <section class="flex-row justify-center">
     <!-- For each painting that belongs to this gallery, the painting-details partial is used to render each painting's data -->
-    {{#each category.productss as |product|}}
+    {{#each category.products as |product|}}
     {{> product-details}}
     {{/each}}
   </section>
