--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
   <title>MI homepage</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,8 +21,9 @@
   </nav>
   <main>
 {{#if logged_in}}
+<a href=""></a>
     <nav>
-      <button class="btn" id="logout">logout</button>
+      <button style="padding:unset;" class="btn" id="logout"><a href="">logout</a></button>
     </nav>
     {{else}}
     <nav>
@@ -37,9 +39,10 @@
   
   <!--if user logged in have option to logout-->
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+  <script src="./js/login/logout.js"></script>
   {{/if}}
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
