--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,6 +1,5 @@
-
 <section class="product">
-  <img src="/images/{{product.filename}}" alt="{{product.description}}">
+  <img src="/images/{{product.filename}}" alt="{{product.description}}" />
   <div class="product-details">
     <h3>{{product.name}}</h3>
     <p>Price:{{product.price}}</p>
