--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,10 @@
     <h3>Where music dreams come true</h3>
   </header>
   <nav>
+    <a href="/cart">🛒</a>
+  </nav>
+  <nav>
     <a href="/">Home</a>
-    
   </nav>
   <main>
 {{#if logged_in}}
