--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -7,15 +7,16 @@
 {{#each products as |product| }}
     <div class="row align-center mb-5">
   <div class="col-md-6">
-      <h2>{{name}}</h2>
+      <h2><a href="/product/{{product.id}}">{{product.name}}</a></h2>
     </div>
   <div class="col-md-6">
       <p>img here</p>
     <h3>{{price}}</h3>
-     <button type="button" class="btn btn-primary">
-          Remove from cart
+    <div class="col-md-4"></div>
+     <button type="button" class="btn btn-sm btn-danger" data-id="{{product.id}}">
+          Remove
       </button>
-      <p>trash emoji</p>
+  </div>
 </div>
 {{/each}}
 <div class="row mt-4">
@@ -23,9 +24,9 @@
       <button type="button" class="btn btn-primary">
           Checkout cart
       </button>
-      <button type="button" class="btn btn-primary">
-          Continue shopping
-      </button>
+      <h4>
+          <a href="/">Continue shopping</a>
+      </h4>
   </div>
 </div>
     
