--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -2,8 +2,8 @@
   <a href="/product/{{id}}"></a>
   <header>{{name}}</header>
   <div class="card-body">
-      <h1>{{product.name}}</h1>
-       <img src="/images/{{product.[0].name}}" alt="{{product.[0].description}}">
+      <h1 class="h1">{{product.name}}</h1>
+      <img src="../../public/images/{{product.name}}" alt="{{product.name}}">
   </a>
   </div>
 </section>
