--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -1,9 +1,10 @@
 <section class="card">
-  <a href="/product/{{id}}"></a>
-  <header>{{name}}</header>
-  <div class="card-body">
+  <a href="/product/{{id}}">
+    <header>{{name}}</header>
+    <div class="card-body">
       <h1 class="h1">{{product.name}}</h1>
-      <img src="../../public/images/{{product.name}}" alt="{{product.name}}">
+      <img src="../../public/images/{{product.name}}" alt="{{product.name}}" />
+    </div>
   </a>
-  </div>
+
 </section>
