--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -3,6 +3,8 @@
   <div class="product-details">
     <h3>{{product.name}}</h3>
     <p>Price:{{product.price}}</p>
-    <button class="btn btn-primary"> Add to cart</button>
+    <button id="test" data-id="{{product.id}}" class="btn btn-primary"> Add to cart</button>
   </div>
 </section>
+
+<script src="../js/addToCart/cartBtn.js"></script>
