--- a/views/partials/category-details.handlebars
+++ b/views/partials/category-details.handlebars
@@ -1,9 +1,6 @@
 <section class="card">
   <a href="/category/{{id}}">
     <header>{{name}}</header>
-    <img
-      src="/images/{{products.0.filename}}"
-      alt="{{products.0.description}}"
-    />
+    <img src="/images/{{products.0.name}}.jpg" alt="{{products.0.name}}" />
   </a>
 </section>
