--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,9 +1,10 @@
 <section class="product">
-  <img src="../public/images/{{this.name}}" alt="{{this.description}}" />
+  <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
   <div class="product-details">
     <h3>{{product.name}}</h3>
     <p>Price:{{product.price}}</p>
-    <button id="test" data-id="{{product.id}}" class="btn btn-primary"> Add to cart</button>
+    <button id="test" data-id="{{product.id}}" class="btn btn-primary">
+      Add to cart</button>
   </div>
 </section>
 
