--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -3,7 +3,7 @@
     <header>{{name}}</header>
     <div class="card-body">
       <h1 class="h1">{{product.name}}</h1>
-      <img src="../../public/images/{{product.name}}" alt="{{product.name}}" />
+      <img src="/images/{{name}}.jpg" alt="{{name}}" />
     </div>
   </a>
 </section>
