--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
-<!--For each category, the category-details partial is userd to render the category data-->
+<div class ="category">
 {{#each categories as |category|}}
 {{> category-details}}
 {{/each}}
-
+</div>
