--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -2,12 +2,12 @@
   <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
   <div class="product-details">
     <h3>{{product.name}}</h3>
-    <p>Price: ${{product.price}}</p>
-    <p>Stock: {{product.stock}}</p>
+    <p id="price">Price: ${{product.price}}</p>
+    <p id="stock">Stock: {{product.stock}}</p>
     <button id="test" data-id="{{product.id}}" class="btn btn-primary">
       Add to cart</button>
     <br /><br />
-    <div class="">
+    <div>
       <p>Product Description:</p>
       <p>{{product.description}}</p>
     </div>
