--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -4,7 +4,7 @@
     <h3>{{product.name}}</h3>
     <p id="price">Price: ${{product.price}}</p>
     <p id="stock">Stock: {{product.stock}}</p>
-    <button id="test" data-id="{{product.id}}" class="btn btn-primary">
+    <button id="addBtn" data-id="{{product.id}}" class="btn btn-primary">
       Add to cart</button>
     <br /><br />
     <div>
