--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -7,15 +7,16 @@
 {{#each products as |product| }}
     <div class="row align-center mb-5">
   <div class="col-md-6">
-      <h2>{{name}}</h2>
+      <h2>
+          <a href="/product/{{id}}">{{name}}</h2>
+          </a>
     </div>
   <div class="col-md-6">
-      <p>img here</p>
-    <h3>{{price}}</h3>
+       <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
+    <p>Price:${{price}}</p>
      <button type="button" class="btn btn-primary">
-          Remove from cart
+          Remove from cart 🗑
       </button>
-      <p>🗑</p>
 </div>
 {{/each}}
 <div class="row mt-4">
@@ -23,9 +24,11 @@
       <button type="button" class="btn btn-primary">
           Checkout cart
       </button>
+      <a href="/">
       <button type="button" class="btn btn-primary">
           Continue shopping
       </button>
+      </a>
   </div>
 </div>
     
