--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -20,11 +20,11 @@
 {{/each}}
 <div class="row mt-4">
   <div class="col-md-6">
-      <button type="button" class="btn btn-primary">
-          Checkout cart
+      <button id="checkout" type="button" class="btn btn-primary">
+          Checkout Cart
       </button>
       <button type="button" class="btn btn-primary">
-          Continue shopping
+          Continue Shopping
       </button>
   </div>
 </div>
