--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,9 @@
       <a href="/">Home</a>
       <a href="/cart">Cart 🛒</a>
       {{#if logged_in}}
-        <button style="padding:unset;" class="btn" id="logout"><a href="">logout</a></button>
+        <button style="padding:unset;" class="btn" id="logout"><a
+            href=""
+          >logout</a></button>
       {{else}}
         <a href="/login">Login</a>
       {{/if}}
@@ -41,4 +43,5 @@
     {{/if}}
   </body>
   <script src="../js/addToCart/cartBtn.js"></script>
+  <script src="../js/payment/checkoutBtn.js"></script>
 </html>
