--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     {{#if logged_in}}
-      <script src="./js/login/logout.js"></script>
+      <script src="../js/login/logout.js"></script>
     {{/if}}
   </body>
   <script src="../js/addToCart/cartBtn.js"></script>
