--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -7,15 +7,17 @@
 {{#each products as |product| }}
     <div class="row align-center mb-5">
   <div class="col-md-6">
-      <h2>{{name}}</h2>
+      <h2>
+          <a href="/product/{{id}}">
+            {{name}}</h2>  
+          </a>
     </div>
   <div class="col-md-6">
-      <p>img here</p>
-    <h3>{{price}}</h3>
+      <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
+    <p>Price:${{price}}</p>
      <button id="deleteBtn" data-id="{{product.id}}" type="button" class="btn btn-primary">
-          Remove from cart
+          Remove from cart 🗑
       </button>
-      <p>🗑</p>
 </div>
 {{/each}}
 <div class="row mt-4">
@@ -24,7 +26,9 @@
           Checkout Cart
       </button>
       <button type="button" class="btn btn-primary">
-          Continue Shopping
+         <a href="/">
+            Continue Shopping 
+         </a> 
       </button>
   </div>
 </div>
