--- a/views/check-out.handlebars
+++ b/views/check-out.handlebars
@@ -1,57 +1,74 @@
 <div class="row mt-4">
   <div class="col-md-6">
-      <h2>Checking out {{name}}</h2>
+    <h2>Checking out {{name}}</h2>
   </div>
-<form class="row g-3">
+  <form class="row g-3">
     <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">Name</label>
-    <input type="name" class="form-control" id="inputname">
-  </div>
-  <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">Email</label>
-    <input type="email" class="form-control" id="inputEmail4">
-  </div>
-  <div class="col-12">
-    <label for="inputAddress" class="form-label">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="col-12">
-    <label for="inputAddress2" class="form-label">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="col-md-6">
-    <label for="inputCity" class="form-label">City</label>
-    <input type="text" class="form-control" id="inputCity">
-  </div>
-  <div class="col-md-4">
-    <label for="inputState" class="form-label">State</label>
-    <select id="inputState" class="form-select">
-      <option selected>Choose...</option>
-      <option>...</option>
-    </select>
-  </div>
-  <div class="col-md-2">
-    <label for="inputZip" class="form-label">Zip</label>
-    <input type="text" class="form-control" id="inputZip">
-  </div>
-  <div class="col-md-6">
-    <label for="inputNum" class="form-label">Credit card number</label>
-    <input type="text" class="form-control" id="cardNum">
-  </div>
-  <div class="col-md-4">
-    <label for="inputDate" class="form-label">Expires</label>
-    <select id="inputDate" class="form-select">
-      <option selected>Choose...</option>
-      <option>...</option>
-    </select>
-  </div>
-  <div class="col-md-2">
-    <label for="inputZip" class="form-label">Cvc code</label>
-    <input type="text" class="form-control" id="inputZip">
-  </div>
-  <div class="col-12">
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </div>
-</form>
+      <label for="inputEmail4" class="form-label">Name</label>
+      <input type="name" class="form-control" id="inputname" />
+    </div>
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail" />
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">Address</label>
+      <input
+        type="text"
+        class="form-control"
+        id="inputAddress"
+        placeholder="1234 Main St"
+      />
+    </div>
+    <div class="col-12">
+      <label for="inputAddress2" class="form-label">Address 2</label>
+      <input
+        type="text"
+        class="form-control"
+        id="inputAddress2"
+        placeholder="Apartment, studio, or floor"
+      />
+    </div>
+    <div class="col-md-6">
+      <label for="inputCity" class="form-label">City</label>
+      <input type="text" class="form-control" id="inputCity" />
+    </div>
+    <div class="col-md-4">
+      <label for="inputState" class="form-label">State</label>
+      <select id="inputState" class="form-select">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <label for="inputZip" class="form-label">Zip</label>
+      <input type="text" class="form-control" id="inputZip" />
+    </div>
+    <div class="col-md-2">
+      <label for="inputZip" class="form-label">Shipping Method</label>
+      <select id="inputDate" class="form-select">
+        <option selected>Choose...</option>
+        <option>Standard</option>
+        <option>Express</option>
+      </select>
+    </div>
+    <div class="col-md-6">
+      <label for="inputNum" class="form-label">Credit card number</label>
+      <input type="text" class="form-control" id="cardNum" />
+    </div>
+    <div class="col-md-4">
+      <label for="inputDate" class="form-label">Expires</label>
+      <select id="inputDate" class="form-select">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <label for="inputZip" class="form-label">Cvc code</label>
+      <input type="text" class="form-control" id="inputZip" />
+    </div>
+    <div class="col-12">
+      <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
 </div>
-
