--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,4 +44,5 @@
   </body>
   <script src="../js/addToCart/cartBtn.js"></script>
   <script src="../js/payment/checkoutBtn.js"></script>
+  <script src="../js/payment/submitBtn.js"></script>
 </html>
