stock -/+ with with add to cart button deactivation

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -15,6 +15,7 @@
   <div class="col-md-6">
       <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
     <p>Price:${{price}}</p>
+    <p>Item(s): {{cart.quantity}}</p>
      <button id="deleteBtn" data-id="{{product.id}}" type="button" class="btn btn-primary">
           Remove from cart 🗑
       </button>
