--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -16,6 +16,7 @@
       <img src="/images/{{product.name}}.jpg" alt="{{this.description}}" />
     <p>Price:${{price}}</p>
     <p>Item(s): {{cart.quantity}}</p>
+    <p>Total:${{itemTotal price cart.quantity}}</p>
      <button id="deleteBtn" data-id="{{product.id}}" type="button" class="btn btn-primary">
           Remove from cart 🗑
       </button>
