--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,4 @@
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,16 +15,14 @@
 
   <body>
     <header>
-      <h1>Welcome to Mortal Instruments!</h1>
+      <h1>Welcome to Electric Wipeout's Mortal Instruments!</h1>
       <h3>Where music dreams come true</h3>
     </header>
     <nav>
       <a href="/">Home</a>
       <a href="/cart">Cart 🛒</a>
       {{#if logged_in}}
-        <button style="padding:unset;" class="btn" id="logout"><a
-            href=""
-          >logout</a></button>
+      <a id="logout" href="">logout</a></button>
       {{else}}
         <a href="/login">Login</a>
       {{/if}}
@@ -33,6 +30,9 @@
     <main class="container container-fluid mt-5">
       {{{body}}}
     </main>
+    <footer>
+      <p></p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
