--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,19 @@
       {{{body}}}
     </main>
     <footer>
-      <p></p>
+      <div class="container">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="/cart" class="nav-link px-2 text-muted">Cart</a></li>
+      <li class="nav-item"><a href="https://github.com/smeske10/Electric-Wipeouts-Mortal-Instruments" class="nav-link px-2 text-muted">Github Repository</a></li>
+      <li class="nav-item"><a href="https://github.com/britt-klose" class="nav-link px-2 text-muted">Github: Brittany Klose</a></li>
+      <li class="nav-item"><a href="https://github.com/smeske10" class="nav-link px-2 text-muted">Github: Sam Meske</a></li>
+      <li class="nav-item"><a href="https://github.com/Adolfo-G" class="nav-link px-2 text-muted">Github: Adolfo Gonzalez</a></li>
+    </ul>
+    <p class="text-center text-muted">Electric Wipeout's Mortal Instruments</p>
+  </footer>
+</div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
